news-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: news
  template:
    metadata:
      labels:
        app: news
    spec:
      containers:
        - name: news-container
          image: amitmvaja/news
          ports:
            - containerPort: 3000
