news-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: news-service
  namespace: default
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # Change this to "nlb" if using Network Load Balancer
spec:
  selector:
    app: news
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
